--- a/BUILD_CMAKE/CMakeLists.txt
+++ b/BUILD_CMAKE/CMakeLists.txt
@@ -6,31 +6,31 @@ set(CMAKE_C_STANDARD_REQUIRED True)
 
 option(BUILD_DEPRESSED "Build Depressed gui" OFF)
 
-list(APPEND LIBDEPRESS_SRC ../src/depress_converter.c)
-list(APPEND LIBDEPRESS_SRC ../src/depress_document.c)
-list(APPEND LIBDEPRESS_SRC ../src/depress_image.c)
-list(APPEND LIBDEPRESS_SRC ../src/depress_paths.c)
-list(APPEND LIBDEPRESS_SRC ../src/depress_tasks.c)
-list(APPEND LIBDEPRESS_SRC ../src/depress_threads.c)
-list(APPEND LIBDEPRESS_SRC ../src/interlocked_ptr.c)
-list(APPEND LIBDEPRESS_SRC ../src/ppm_save.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_converter.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_document.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_image.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_paths.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_tasks.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_threads.c)
+list(APPEND DEPRESSCORE_SRC ../src/interlocked_ptr.c)
+list(APPEND DEPRESSCORE_SRC ../src/ppm_save.c)
 if(WIN32)
 else()
-  list(APPEND LIBDEPRESS_SRC ../src/extclib/wcstombsl.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/waccess.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wfopen.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wgetcwd.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wmain_stdc.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wmkdir.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wpopen.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wremove.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wrmdir.c)
-  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wtoi.c)
+  list(APPEND DEPRESSCORE_SRC ../src/extclib/wcstombsl.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/waccess.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wfopen.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wgetcwd.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wmain_stdc.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wmkdir.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wpopen.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wremove.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wrmdir.c)
+  list(APPEND DEPRESSCORE_SRC ../src/unixsupport/wtoi.c)
 endif()
 
-add_library(libdepress ${LIBDEPRESS_SRC})
+add_library(depresscore ${DEPRESSCORE_SRC})
 
-list(APPEND EXTRA_LIBS libdepress)
+list(APPEND EXTRA_LIBS depresscore)
 
 add_executable(depress ../src/depress.c)
 
