--- a/BUILD_CMAKE/CMakeLists.txt
+++ b/BUILD_CMAKE/CMakeLists.txt
@@ -14,6 +14,7 @@ list(APPEND DEPRESSCORE_SRC ../src/depress_tasks.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_threads.c)
 list(APPEND DEPRESSCORE_SRC ../src/interlocked_ptr.c)
 list(APPEND DEPRESSCORE_SRC ../src/ppm_save.c)
+list(APPEND DEPRESSCORE_SRC ../src/third_party/noteshrink.c)
 if(WIN32)
 else()
   list(APPEND DEPRESSCORE_SRC ../src/extclib/wcstombsl.c)
