--- a/BUILD_MSVC2019/depress/depress.vcxproj.filters
+++ b/BUILD_MSVC2019/depress/depress.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\..\src\third_party\noteshrink.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\depress_maker_djvu.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="..\..\resources\applications.manifest" />
