--- a/BUILD_CMAKE/CMakeLists.txt
+++ b/BUILD_CMAKE/CMakeLists.txt
@@ -9,6 +9,7 @@ option(BUILD_DEPRESSED "Build Depressed gui" OFF)
 list(APPEND DEPRESSCORE_SRC ../src/depress_converter.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_document.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_image.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_maker_djvu.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_paths.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_tasks.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_threads.c)
