--- a/BUILD_MSVC2019/depressed/depressed.vcxproj
+++ b/BUILD_MSVC2019/depressed/depressed.vcxproj
@@ -441,6 +441,7 @@
     <ClCompile Include="..\..\src\depress_document.c" />
     <ClCompile Include="..\..\src\depress_image.c" />
     <ClCompile Include="..\..\src\depress_maker_djvu.c" />
+    <ClCompile Include="..\..\src\depress_outlines.c" />
     <ClCompile Include="..\..\src\depress_paths.c" />
     <ClCompile Include="..\..\src\depress_tasks.c" />
     <ClCompile Include="..\..\src\depress_threads.c" />
