Fix project files

--- a/BUILD_CMAKE/CMakeLists.txt
+++ b/BUILD_CMAKE/CMakeLists.txt
@@ -10,6 +10,7 @@ list(APPEND DEPRESSCORE_SRC ../src/depress_converter.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_document.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_image.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_maker_djvu.c)
+list(APPEND DEPRESSCORE_SRC ../src/depress_outlines.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_paths.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_tasks.c)
 list(APPEND DEPRESSCORE_SRC ../src/depress_threads.c)
